--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
     "click>=8.1.8",
-    "ruff>=0.11.2",
+    "rich>=14.0.0",
 ]
 
 [build-system]
-requires = ["setuptools"]
-build-backend = "setuptools.build_meta"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
 
 [project.scripts]
 noterat = "noterat.noterat:cli"
@@ -19,4 +19,5 @@ noterat = "noterat.noterat:cli"
 [dependency-groups]
 dev = [
     "pytest>=8.3.5",
+    "ruff>=0.11.6",
 ]
