--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.13"
 dependencies = [
     "click>=8.1.8",
     "rich>=14.0.0",
+    "xdg-base-dirs>=6.0.2",
 ]
 
 [build-system]
@@ -18,6 +19,7 @@ noterat = "noterat.noterat:cli"
 
 [dependency-groups]
 dev = [
+    "mypy>=1.15.0",
     "pytest>=8.3.5",
     "ruff>=0.11.6",
 ]
